# checkers

./: CMakeLists.txt  README.md  main.cpp
docs/: Doxyfile  Doxyfile.in
src/: Participant.cpp  Participant.hpp  board.cpp  board.hpp  clear.cpp  game.cpp  game.hpp  logic.cpp  logic.hpp  participant.cpp  participant.hpp  pieces.cpp  pieces.hpp
tst/: Participant_test.cc  board_test.cc  game_test.cc  logic_test.cc  logic_test.cpp  pieces_test.cc
utils/: clear.h
